# cli-sd-team2-cpp

./: .clang-format  CMakeLists.txt  README.md  bash.drawio
.github/workflows/: tests.yml
src/: ast.cpp  ast.hpp  commands.cpp  environment.cpp  environment.hpp  executor.cpp  executor.hpp  lexer.l  main.cpp  parser.y
tests/: CMakeLists.txt  test_assignment.cpp  test_cat.cpp  test_cd.cpp  test_echo.cpp  test_environment.cpp  test_example.cpp  test_exit.cpp  test_external.cpp  test_grep.cpp  test_ls.cpp  test_pipeline.cpp  test_pwd.cpp  test_wc.cpp
